Removed Google Ads.  Plagiarists should not profit.

--- a/BC-Free/app/src/main/res/layout/activity_main.xml
+++ b/BC-Free/app/src/main/res/layout/activity_main.xml
@@ -28,28 +28,16 @@
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize" />
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/av_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:visibility="gone"
-            ads:adSize="SMART_BANNER"
-            ads:adUnitId="@string/banner_ad_unit_id" />
-
         <FrameLayout
             android:id="@+id/fl_main_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/av_main"
             android:layout_below="@id/main_toolbar" />
 
         <android.support.design.widget.CoordinatorLayout
             android:id="@+id/cl_main"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/av_main">
+            android:layout_height="match_parent" >
 
             <ca.josephroque.bowlingcompanion.view.AnimatedFloatingActionButton
                 android:id="@+id/fab_main"
